fix host a screening x and jumping to partners page

--- a/themes/bootstrap/css/style.css
+++ b/themes/bootstrap/css/style.css
@@ -1516,6 +1516,10 @@ nav{
 #screening-close {
 	cursor:pointer;
 	float: right;
+	background: url(../images/x-icon.png);
+  background-size: cover;
+  height: 30px;
+  width: 30px;
 }
 .screening-input{
 	border: 2px solid #999;
